2009-01-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add sp48 which tests that configuring for
	unlimited objects when configured for a unified workspace works as
	expected.
	* sp48/.cvsignore, sp48/Makefile.am, sp48/init.c, sp48/sp48.doc,
	sp48/sp48.scn: New files.

2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
	        Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1357/cpukit
	* Makefile.am, configure.ac: Ensure creating a task with no ASR is
	honored.
	* sp47/.cvsignore, sp47/Makefile.am, sp47/init.c, sp47/sp47.doc,
	sp47/sp47.scn: New files.

2009-01-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to test Watchdog display
	helper routines. These reach into the SuperCore.
	* spwatchdog/.cvsignore, spwatchdog/Makefile.am, spwatchdog/delay.c,
	spwatchdog/init.c, spwatchdog/prtime.c, spwatchdog/spwatchdog.scn,
	spwatchdog/system.h, spwatchdog/task1.c: New files.

2009-01-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp30/task1.c: Cast pointer to id as "void *" rather than task Id.

2009-01-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen05.c, sp09/screen07.c, sp09/screen10.c, sp09/screen11.c,
	sp09/screen12.c, sp09/screen14.c: Use rtems_build_id rather than
	hard-coded hex numbers for bad object Ids.

2009-01-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp15/system.h, sp19/system.h: Array of task names should be of type
	rtems_name not rtems_id. Similarly array of task ids should be
	rtems_id not rtems_name.

2008-12-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spsize/size.c: Eliminate _TOD_Microseconds_per_tick.

2008-12-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, spfatal06/testcase.h,
	spfatal07/testcase.h, spfatal08/testcase.h, spfatal09/testcase.h,
	spsize/size.c: Eliminate pointers to API configuration tables in the
	main configuration table. Reference the main configuration table and